start på Åmose hoved side

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta charset="UTF-8">
-  <title>Åmosen skebelon</title>
+  <title>Åmosen mobil app workshop</title>
   <link rel="stylesheet" type="text/css" href="aamosen.css">
 </head>
 
 <body>
-  <h1>Dette er en overskrift</h1>
-  <p>Dette er en paragraf</p>
+  <h1>Velkommen til HumTek workshop om udvikling af mobil aps til naturpark Åmosen</h1>
+  <p>Der bliver lavet tre projekter</p>
   <img src="aamosen.jpg" alt="Åmosen">
 </body>
